--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </section>
             <section>
                 <h2>Volume (Litres/Gallon)</h2>
-                <p id="volume-content">placeholder</p>
+                <p id="volume-content"></p>
             </section>
             <section>
                 <h2>Mass (Kilograms/Pounds)</h2>
-                <p id="mass-content">placeholder</p>
+                <p id="mass-content"></p>
             </section>
         </main>
 
